--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ boto==2.49.0
 boto3==1.9.124
 botocore==1.12.124
 bz2file==0.98
+cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
 cycler==0.10.0
@@ -14,6 +15,11 @@ defusedxml==0.5.0
 docutils==0.14
 entrypoints==0.3
 gensim==3.7.1
+google-api-core==1.8.2
+google-auth==1.6.3
+google-cloud-core==0.29.1
+google-cloud-translate==1.3.3
+googleapis-common-protos==1.5.9
 idna==2.8
 ipykernel==5.1.0
 ipython==7.4.0
@@ -39,11 +45,15 @@ numpy==1.16.2
 pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.3.4
+pbr==5.1.3
 pexpect==4.6.0
 pickleshare==0.7.5
 prometheus-client==0.6.0
 prompt-toolkit==2.0.9
+protobuf==3.7.1
 ptyprocess==0.6.0
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
 Pygments==2.3.1
 pyparsing==2.3.1
 pyrsistent==0.14.11
@@ -52,6 +62,7 @@ pytz==2018.9
 pyzmq==18.0.1
 qtconsole==4.4.3
 requests==2.21.0
+rsa==4.0
 s3transfer==0.2.0
 scipy==1.2.1
 seaborn==0.9.0
@@ -59,6 +70,7 @@ Send2Trash==1.5.0
 singledispatch==3.4.0.3
 six==1.12.0
 smart-open==1.8.0
+stevedore==1.30.1
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.2
