--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -55,6 +55,7 @@ ptyprocess==0.6.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
 Pygments==2.3.1
+pymongo==3.7.2
 pyparsing==2.3.1
 pyrsistent==0.14.11
 python-dateutil==2.8.0
@@ -76,6 +77,9 @@ testpath==0.4.2
 tornado==6.0.2
 traitlets==4.3.2
 urllib3==1.24.1
+virtualenv==16.2.0
+virtualenv-clone==0.5.1
+virtualenvwrapper==4.8.4
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
